# esp32-win98-server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  partitions.csv  sdkconfig.default
.github/workflows/: mirror-tangled.yml
main/: CMakeLists.txt  Kconfig.projbuild  core.c  core.h  idf_component.yml  main.c  server.c  server.h
main/pages/: about.html  guestbook.html  sysinfo.html
